tests/pass/hello2.ct
def main(a: int): void {
    return;
}
