tests/fail/missing-import.ct
import a::b::c;

def stub(): void { }